Installation
***********************************************
See INSTALL file for details

ChangeLog
***********************************************

Version 0.120
 Added:
  - Czech translation (thx to Pavel Fric)
  - Added cmake option MANPAGE_ENTRY_PATH;
  - User now can open system terminal from q4wine programs tab menu for selected dir;
  - Winetriks plugin updates;
  - Added minimize to tray at startup option;
  - Added minimize to tray at application icon startup option;
  - DBUS notification;

 Fixed:
  - warning: ignoring return value of ‘int chdir(const char*)’, declared with attribute warn_unused_result;
  - Fixed unescaped characters in q4wine-helper (q4wine-Bugs-3059156);
  - Fixed bug in q4wine-helper while run games like: Fallout 1\2, Truck Simulator e.t.c.
  - Fixed some typo and gui layouts;
  - Fixed fakedrivesettings.cpp rewrite sh scripts in to C++\Qt code;
  - FreeBSD: report error while can't read process info from /proc fs;

Version 0.119-r1
 Added:
  - Updated Russian translation (thx to Boris Pek)
  - Settings dialog online documenatation;

 Fixed:
  - Some of english spell errors; 
  - hyphen-used-as-minus-sign errors for man pages;
  - bug with dll override app run (q4wine-Bugs-3043548);
  - bug with user console wine app run; 
  - strange locale bug reported by Taras Rozbitskiy;

Version 0.119
 Added:
  - New Fake Drive settings dialog (Wizard now obsolete);
  - Added a lot of new Fake Drive options;
  - Desktop integraion;
  - Wine .desktop files import;
  - Sync fake drive settings to head wine version;
  - Various user interface enhancement; 
  - Updated Ukrainian, Italian and Spanish translations;
  - Updated online documentation;

 Fixed:
  - Some fixes for GUI layout;
  - Winetriks plugin improvement;
  - Fixed bugs reported by users;
  - Fixed some of English spellings;

Version 0.118
 Added:
  - Wine AppDB support;
  - Helper binary and Application logger subsystem;
  - A lot of GUI improvements;