@@ -7,21 +7,25 @@ ChangeLog
 
 Version 0.120
  Added:
-  - Czech translation (thx to Pavel Fric)
+  - Czech translation (thx to Pavel Fric);
   - Added cmake option MANPAGE_ENTRY_PATH;
   - User now can open system terminal from q4wine programs tab menu for selected dir;
   - Winetriks plugin updates;
   - Added minimize to tray at startup option;
   - Added minimize to tray at application icon startup option;
   - DBUS notification;
+  - Added Wine WOW64Node support and configuration settings;
 
  Fixed:
   - warning: ignoring return value of ‘int chdir(const char*)’, declared with attribute warn_unused_result;
   - Fixed unescaped characters in q4wine-helper (q4wine-Bugs-3059156);
+  - Fixed run dialog bug for gut trunk (q4wine-Bugs-3075628);
   - Fixed bug in q4wine-helper while run games like: Fallout 1\2, Truck Simulator e.t.c.
   - Fixed some typo and gui layouts;
   - Fixed fakedrivesettings.cpp rewrite sh scripts in to C++\Qt code;
   - FreeBSD: report error while can't read process info from /proc fs;
+  - Fixed $HOME/.config/q4wine/tmp not requeired any more, we use $WINEPREFIX/tmp instead; 
+  - Desktop file updates;
 
 Version 0.119-r1
  Added:
